# mini_pupper_ros

./: .flake8  .gitignore  .gitmodules  .minipupper.repos  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HUMBLE_PLAN.md  NOTICES.md  QUICK_START.md  README.md  install.sh  mmal_service_16.1.yaml  pc_install.sh  pupper_install.sh  requirements.txt  robot.service  run.sh  show_ip.py
mini_pupper_2_description/: CMakeLists.txt  package.xml
mini_pupper_2_description/config/ros_control/: mini_pupper_controller.yaml
mini_pupper_2_description/launch/: description.launch.py
mini_pupper_2_description/mesh_back/meshes/: lf2.stl  rbfoot.stl  rf2.stl  rpf1.stl
mini_pupper_2_description/meshes/: Board_PCB.stl  Board_connectors_1.stl  Board_connectors_2.stl  Body_front.stl  Shell_Leg_Upper_RightSide_1.stl  Shell_Side.stl  base_link.stl  lb1.stl  lb1_.stl  lb2.stl  lb3.stl  lbfoot.stl  lf1.stl  lf2.stl  lf3.stl  lffoot.stl  lpb1.stl  lpb2.stl  lpf1.stl  lpf2.stl  rb1.stl  rb2.stl  rb3.stl  rbfoot.stl  rf1.stl  rf2.stl  rf3.stl  rffoot.stl  rpb1.stl  rpb2.stl  rpf1.stl  rpf2.stl
mini_pupper_2_description/rviz/: urdf_viewer.rviz
mini_pupper_2_description/urdf/: materials.xacro  mini_pupper_description.trans  mini_pupper_description.urdf  mini_pupper_description.urdf.xacro
mini_pupper_bringup/: CMakeLists.txt  package.xml
mini_pupper_bringup/config/: mini_pupper.yaml  mini_pupper_2.yaml
mini_pupper_bringup/config/gait/: gait.yaml
mini_pupper_bringup/include/: gait_config.h
mini_pupper_bringup/launch/: bringup.launch  bringup.launch.py  bringup.web.launch  bringup_isolated.launch.py  champ_bringup.launch  hardware_bringup.launch.py  hardware_interface.launch.py  ld06_bringup.launch  lidar.launch.py  rviz.launch.py  v1_lidar.launch.py
mini_pupper_bringup/rviz/: 2d.rviz  mini_pupper.rviz
mini_pupper_control/: CMakeLists.txt  package.xml  pytest.ini  setup.cfg  setup.py
mini_pupper_control/config/: gazebo_ros_control.yaml  joints.yaml
mini_pupper_control/launch/: calibrate.launch  display_interface.launch  display_interface.launch.py  servo_interface.launch  servo_interface.launch.py  vel_to_servo_controller.launch.py
mini_pupper_control/mini_pupper_control/: display_interface.py  servo_interface.py  vel_to_servo_controller.py
mini_pupper_control/scripts/: calibrate.py  display_interface.py  servo_interface.py  servo_interface_legacy.py
mini_pupper_control/test/: lint_pep257.py  test_copyright.py  test_flake8.py  test_pep257.py
mini_pupper_control_v2/: .gitignore  CMakeLists.txt  create_settings.sh  package.xml
mini_pupper_control_v2/config/calibration/: calibration_settings.template.yaml
mini_pupper_control_v2/launch/: servo_interface.launch
mini_pupper_control_v2/scripts/: calibrate.py  requirements.txt  servo_controller_v2.py
mini_pupper_control_v2/scripts/mini_pupper/: __init__.py  pytest.ini
mini_pupper_description/: CMakeLists.txt  LICENSE  README.md  package.xml
mini_pupper_description/config/: CMakeLists.txt  joint_names_mini_pupper_description.yaml
mini_pupper_description/launch/: description.launch  description.launch.py  display.launch  gazebo.launch  mini_pupper_description.launch.py
mini_pupper_description/meshes/: Board_connectors_1.stl  CMakeLists.txt  Shell_Leg_Upper_LeftSide_1.stl  Shell_Leg_Upper_LeftSide_2.stl  Shell_Leg_Upper_RightSide_2.stl  base_link.STL  lb1.STL  lb2.STL  lb3.STL  lf1.STL  lf1.stl  lf2.STL  lf3.STL  lidar.STL  lpb1.STL  mini_pupper_lffoot.STL  rb1.STL  rb2.STL  rb3.STL  rbfoot.STL  rf1.STL  rf1.stl  rf2.STL  rf3.STL  rpb1.STL  yellow_plate.STL
mini_pupper_description/mini_pupper_meshes/: mini_pupper_rffoot.STL
mini_pupper_description/urdf/: CMakeLists.txt  _d435.urdf.xacro  _materials.urdf.xacro  _usb_plug.urdf.xacro  mini_pupper_2_description.urdf  mini_pupper_description.csv  mini_pupper_description.urdf  mini_pupper_description.urdf.xacro
mini_pupper_examples/: CMakeLists.txt  README.md  package.xml
mini_pupper_examples/launch/: dance.launch  follow_object.launch
mini_pupper_examples/mini_pupper_dance/: CMakeLists.txt  package.xml
mini_pupper_examples/mini_pupper_detect/: CMakeLists.txt  package.xml
mini_pupper_examples/mini_pupper_oak/: CMakeLists.txt  package.xml  setup.cfg  setup.py
mini_pupper_examples/scripts/: dance.py  oak_detect.py
mini_pupper_gazebo/: CMakeLists.txt  README.md  package.xml
mini_pupper_gazebo/launch/: gazebo.launch  gazebo.launch.py
mini_pupper_gazebo/worlds/: mini_pupper_home.world  playground.world
mini_pupper_hardware_interfaces/ps4_interface/: .gitignore  CMakeLists.txt  package.xml
mini_pupper_music/: README.md  package.xml  setup.cfg  setup.py
mini_pupper_music/launch/: music.launch.py
mini_pupper_music/mini_pupper_music/: music_player.py  music_server.py
mini_pupper_navigation/: CMakeLists.txt  config.json  package.xml
mini_pupper_navigation/launch/: bringup.launch.py  localization.launch.py  nav2.launch.py  navigate.launch  navigate.launch.py  navigation.launch.py  occupancy_grid.launch.py  pure_localization.launch.py  slam.launch  slam.launch.py
mini_pupper_navigation/maps/: cartographer_map.pbstream  cartographer_map.pgm  cartographer_map.yaml  map.pgm  map.yaml  mymap.mymap.yaml  mymap.pbstream  mymap.pgm  mymap.yaml
mini_pupper_navigation/param/: mini_pupper.yaml
mini_pupper_navigation/rviz/: cartographer.rviz  mini_pupper_nav.rviz  navigation.rviz
mini_pupper_recognition/: package.xml  setup.cfg  setup.py
mini_pupper_recognition/launch/: ai_line_demo.launch.py  cloud_line_demo.launch.py  recognition.launch.py
mini_pupper_recognition/mini_pupper_recognition/: ai_image_recognition_node.py  cloud_line_following_node.py  cloud_line_recognition_node.py  line_detection_node.py  line_following_node.py  normal_line_following_node.py  pid_line_following_node.py
mini_pupper_recognition/msg/: LineDetectionResult.msg
mini_pupper_teleop/: CMakeLists.txt  package.xml
mini_pupper_teleop/launch/: ps4_interface.launch  remote_teleop.launch
mini_pupper_teleop/scripts/: ds4drv.sh  pose_controller.py  ps4_interface.py  remote_keyboard_controller.py
(+257 files in other folders)
