<?xml version="1.0"?>
<package format="2">
  <name>mini_pupper_bringup</name>
  <version>0.1.0</version>
  <description>mini_pupper bringup package</description>

  <maintainer email="fae@mangdang.net">MangDang</maintainer>
  <author email="fae@mangdang.net">MangDang</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>champ_base</exec_depend>
  <exec_depend>champ_bringup</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>ldlidar_stl_ros</exec_depend>
  <exec_depend>mini_pupper_control</exec_depend>
  <exec_depend>mini_pupper_description</exec_depend>

</package>
