<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mini_pupper_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="thefoxfoxfox@outlook.com">mangdang</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>launch_ros</build_depend>

  <build_export_depend>rclpy</build_export_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
