<?xml version="1.0"?>
<package format="3">
  <name>mini_pupper_description</name>
  <version>0.2.0</version>
  <description>Mini Pupper Description Package</description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>launch_ros</build_depend>

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
