<package format="2">
  <name>mini_pupper_description</name>
  <version>0.1.0</version>
  <description>
    <p>URDF Description package for mini_pupper_description</p>
    <p>This package contains configuration data, 3D models and launch files
for mini_pupper_description robot</p>
  </description>

  <maintainer email="fae@mangdang.net">MangDang</maintainer>
  <author email="fae@mangdang.net">MangDang</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <export>
    <architecture_independent />
  </export>
</package>
