<?xml version="1.0"?>
<package format="2">
  <name>mini_pupper_gazebo</name>
  <version>0.1.0</version>
  <description>mini_pupper Gazebo Package</description>

  <maintainer email="fae@mangdang.net">MangDang</maintainer>
  <author email="fae@mangdang.net">MangDang</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>champ_gazebo</exec_depend>
  <exec_depend>mini_pupper_bringup</exec_depend>

</package>
