<?xml version="1.0"?>
<package format="3">
  <name>mini_pupper_gazebo</name>
  <version>0.1.0</version>
  <description>Mini Pupper Gazebo Package</description>

  <maintainer email="thefoxfoxfox@outlook.com">Han</maintainer>
  <author>Han</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>