<?xml version="1.0"?>
<package format="2">
  <name>mini_pupper_navigation</name>
  <version>0.1.0</version>
  <description>mini_pupper slam/navigation package</description>

  <maintainer email="fae@mangdang.net">MangDang</maintainer>
  <author email="fae@mangdang.net">MangDang</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>move_base</exec_depend>

</package>
