<?xml version="1.0"?>
<package format="3">
  <name>mini_pupper_navigation</name>
  <version>0.1.0</version>
  <description>Mini Pupper Navigation Package</description>

  <maintainer email="fae@mangdang.net">MangDang</maintainer>
  <author email="thefoxfoxfox@outlook.com">Han</author>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
