<package format="2">
  <name>mini_pupper_teleop</name>
  <version>0.1.0</version>
  <description>ROS Package to control Mini Pupper from JoyStick</description>

  <maintainer email="fae@mangdang.net">MangDang</maintainer>
  <author email="fae@mangdang.net">MangDang</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
</package>
